--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "test": "jest --watchAll --verbose"
   },
   "dependencies": {
-    "jest": "29.7.0",
     "node": "23.9.0"
+  },
+  "devDependencies": {
+    "@types/jest": "29.5.14",
+    "jest": "29.7.0"
   }
 }
